--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,11 @@ header {
     background-color: black;
     color: white;
     cursor: pointer;
-    margin: 5vh;
+    margin: 1rem;
     width: 15vw;
     height: 15vw;
+    min-width: 6rem;
+    min-height: 6rem;
 }
 .vs-options>button:hover {
     animation: rotation 5s infinite linear;
@@ -60,6 +62,11 @@ header {
     display: flex;
     width: 50vw;
     justify-content: space-around;
+}
+.player-score,
+.computer-score {
+    text-align: center;
+    margin: 1rem;
 }
 
 #resetBtn {
