--- a/styles.css
+++ b/styles.css
@@ -28,20 +28,21 @@ header {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
 .vs-options>button,
-.button-container>button {
+.button-container>button, 
+.score>button {
     padding: 20px;
     border-radius: 50%;
     background-color: black;
     color: white;
     cursor: pointer;
     margin: 1rem;
-    width: 15vw;
-    height: 15vw;
+    width: 16vw;
+    height: 16vw;
     min-width: 6rem;
     min-height: 6rem;
 }
@@ -60,7 +61,9 @@ header {
 
 .score {
     display: flex;
+    flex-direction: column;
     width: 50vw;
+    align-items: center;
     justify-content: space-around;
 }
 .player-score,
@@ -75,6 +78,15 @@ header {
     height: 15vh;
 }
 
+.turn-signal {
+    margin-top: 5vh;
+    color: darkgray;
+}
+
+.score-announcement {
+    display: flex;
+    justify-content: flex-end;
+}
 
 
 
